# pascal-comp

./: CMakeLists.txt  README.md  codegen.cpp  codegen.h  ex-arr.pas  ex-arr1.pas  ex-arr2.pas  ex-arr3.pas  ex-fac.pas  ex-if.pas  ex-if2.pas  ex1.pas  main.cpp  node.h  out.bc  parser-new.y  parser.y  tokens.l
examples/: ex1.txt
